--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<h1>Unable to show content due to cookie settings! </h1>
+<h1 style=" border-style: solid; border-width: 3px;">Unable to show content due to cookie settings! </h1>
